Grace/tests/gibbs/errors/t109.grace
// ERROR = P1013
method a(b {}
